# YADL

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in.libopus  CMakeLists.txt.in.libsodium  CMakeLists.txt.in.libwebsockets  CMakeLists.txt.in.parson  README.md  test.c  yadl.pc.in
cmake/: FindLibCap.cmake  FindLibDl.cmake  FindLibM.cmake  FindLibSodium.cmake  FindLibUv.cmake  FindLibZ.cmake  FindPthread.cmake  cmake_uninstall.cmake
cmake/build_deps/: CMakeLists.txt.in.libopus  CMakeLists.txt.in.libsodium  CMakeLists.txt.in.libwebsockets  CMakeLists.txt.in.parson
include/: yadl.h
include/yadl/: config.h.in
include/yadl/api/: create_message.h  retrieve_application_info.h  retrieve_channel_by_id.h  retrieve_self_user.h  retrieve_user_by_id.h
include/yadl/callback/: callback.h
include/yadl/gc/: binary_tree.h  gc.h
include/yadl/http/: http_request.h  http_result.h
include/yadl/impl/: application.h  attachment.h  audit_log.h  channel.h  embed.h  emoji.h  guild.h  impl.h  integration.h  invite.h  linked_list.h  message.h  reaction.h  sticker.h  thread.h  user.h  voice.h  webhook.h
include/yadl/json/: json.h
include/yadl/raw/: voice_udp_client.h
include/yadl/utils/: utils.h
include/yadl/websockets/: main_client.h  voice_client.h
src/: yadl.c  yadl.h
src/api/: api.c  api.h  create_message.c  create_message.h  get_current_user.c  get_current_user.h  get_user.c  get_user.h  retrieve_application_info.c  retrieve_application_info.h  retrieve_channel_by_id.c  retrieve_channel_by_id.h  retrieve_self_user.c  retrieve_self_user.h  retrieve_user_by_id.c  retrieve_user_by_id.h
src/callback/: callback.c  callback.h
src/gc/: binary_tree.c  binary_tree.h  gc.c  gc.h  pthread.c  pthread.h
src/http/: http_payload.h  http_request.c  http_request.h  http_result.h
src/impl/: application.c  application.h  attachment.c  attachment.h  audit_log.c  audit_log.h  callback.c  callback.h  channel.c  channel.h  embed.c  embed.h  emoji.c  emoji.h  guild.c  guild.h  impl-inl.h  impl.c  impl.h  integration.c  integration.h  invite.c  invite.h  linked_list.c  linked_list.h  message.c  message.h  reaction.c  reaction.h  sticker.c  sticker.h  thread.c  thread.h  user.c  user.h  voice.c  voice.h  webhook.c  webhook.h
src/json/: json.c  json.h
src/raw/: voice_udp_client.c  voice_udp_client.h
src/utils/: info.h  info.h.in  utils.c  utils.h
src/utils/gc/: binary_tree.c  binary_tree.h  gc.c  gc.h  node_tree.c  node_tree.h  pthread.c  pthread.h
src/utils/http/: http_payload.h  http_request.c  http_request.h  http_result.h
src/utils/json/: json.c  json.h
src/utils/websockets/: main_client.c  main_client.h
src/websockets/: main_client.c  main_client.h  voice_client.c  voice_client.h
test/: CMakeLists.txt  client.c
